--- a/Python/Pair_10_Ficheros_1.ipynb
+++ b/Python/Pair_10_Ficheros_1.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EJERCICIO 1: Una funcion que: Nos muestre en que carpeta estamos trabajando.\n",
+    "# EJERCICIO 1 \n",
+    "Una funcion que: Nos muestre en que carpeta estamos trabajando.\n",
     "Cree una carpeta que se llame \"aprendiendo-ficheros\". ⚠️ Tened en cuenta que si la carpeta ya existe no la podemos crear, nos devolverá un error. Incluye en la función un programa que evite que nos de un error si la carpeta ya existe.\n",
     "Cree otra carpeta que se llame \"datos\" dentro de la carpeta \"aprendiendo-ficheros\". En esta carpeta \"datos\" guardaremos el fichero \"saludo.txt\" que os habéis descargado.\n",
     "Cambiad el directorio de trabajo a la carpeta \"datos\". Antes de seguir chequead que estáis trabajando en la carpeta \"datos\".\n",
@@ -113,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EJERCICIO 2:\n",
+    "# EJERCICIO 2\n",
     "Lea el fichero que se llame \"saludo.txt y muestre su contenido completo.\n",
     "Muestra la línea 4 del fichero\n",
     "\n",
