--- a/Python/Pair_11_Ficheros 2.ipynb
+++ b/Python/Pair_11_Ficheros 2.ipynb
@@ -4,11 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EJERCICIO 1: La función debe recibir 4 parámetros:\n",
+    "# EJERCICIO 1 \n",
+    "La función debe recibir 4 parámetros:\n",
     "Nombre del fichero, incluyendo la extensión.\n",
     "Como queremos leer el fichero.\n",
     "El encoding del fichero.\n",
     "El contenido que queremos escribir en el fichero.\n",
+    "\n",
     "Condiciones de la función:\n",
     "Si el fichero no existe, debe crearlo, insertar contenido y mostrar su contenido.\n",
     "Si el fichero existe pregunta al usuario si quiere sobreescribirlo. En caso de Si, sobreescribe el fichero, insertad contenido y leedlo. En caso de No, no hace nada.\n",
