--- a/Python/Pair_1_Listas_1.ipynb
+++ b/Python/Pair_1_Listas_1.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio 1\n",
+    "El objetivo de este ejercicico es que el ordenador \"piensa\" en un número, y que el usuario tenga una cantidad de intentos limitada para adivinar qué número es"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
