--- a/Python/Pair_3_Diccionarios.ipynb
+++ b/Python/Pair_3_Diccionarios.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio 1\n",
+    "En el juego de hoy se produce una lista aleatoria, de cierta longitud, definida en una variable numérica longitud_lista, y entre los límites (numéricos) lim_inferior y lim_superior. La usuaria tiene un intento de adivinar un número de la lista, y si ha acertado devuelve el (primer) índice en que estaba. Al final del juego imprimimos la lista aleatoria para que el usuario la vea. Haz que vuestro output coincida con el resultado de abajo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -56,13 +64,6 @@
     "print('Terminamos el juego. La lista era', num_list)\n",
     "# Fin del juego"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
