--- a/Python/Pair_4_Tuplas_sets.ipynb
+++ b/Python/Pair_4_Tuplas_sets.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio 1\n",
+    "En el juego de hoy usamos un diccionario con unas cuantas palabras, ordenado en categorías. En el primer paso del juego, la usuaria elige una categoría por su número. Convierte ese número a un índice y úsalo para cargar la lista de palabras word_list. \n",
+    "La word_secreta es una palabra aleatoria de esa lista. \n",
+    "En el segundo paso la usuaria puede adivinar una palabra (en inglés) que puede ser la palabra secreta. Comprobamos si ha acertado o no. De todos modos imprimimos la palabra secreta al terminar el juego.\n",
+    "Os damos cuatro categorias de palabras (inglesas).\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
