--- a/Python/Pair_8_Funciones_1.ipynb
+++ b/Python/Pair_8_Funciones_1.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Cread una función que reciba 2 números enteros en forma de string como entrada, y dé como resultado la suma (también en forma de string)\n",
+    "# Ejercicio 1. \n",
+    "Cread una función que reciba 2 números enteros en forma de string como entrada, y dé como resultado la suma (también en forma de string)\n",
     "Condiciones:\n",
     "Si los dos parámetros que recibe la función son strings vacíos la función nos debe devolver \"0\"\n",
     "Si el primer parámetro es un string vacío, la función nos devuelve el valor del segundo parámetro y viceversa."
@@ -48,7 +49,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. El objetivo es comparar cada par de enteros de 2 listas, y devolver una nueva lista de números grandes.\n",
+    "# Ejercicio 2. \n",
+    "El objetivo es comparar cada par de enteros de 2 listas, y devolver una nueva lista de números grandes.\n",
     "💡 Pista 💡 En Python existe el método zip."
    ]
   },
@@ -141,7 +143,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. El objetivo de este ejercicio es convertir una string en un nuevo string en la que cada carácter de la nueva string es \"(\" si ese carácter aparece sólo una vez en la string original, o \")\" si ese carácter aparece más de una vez en la string original. Nuestro código no tiene que ser case sensitive, es decir, si hay una letra en mayúscula y en minúscula cuenta como dos apariciones.\n",
+    "# Ejercicio 3. \n",
+    "El objetivo de este ejercicio es convertir una string en un nuevo string en la que cada carácter de la nueva string es \"(\" si ese carácter aparece sólo una vez en la string original, o \")\" si ese carácter aparece más de una vez en la string original. Nuestro código no tiene que ser case sensitive, es decir, si hay una letra en mayúscula y en minúscula cuenta como dos apariciones.\n",
     "\n",
     "💡 Pista 💡 Aunque no hayamos visto todavía los métodos de los strings, este tipo de datos es un poco especial y tiene un montón de métodos propios. Entre ellos está el método count que nos puede ser suuuper últil en este ejercicio."
    ]
