--- a/Python/Pair_12_Regex.ipynb
+++ b/Python/Pair_12_Regex.ipynb
@@ -4,25 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EJERCICIO REGEX:\n",
+    "# EJERCICIO 1:\n",
     "1) Extraer el email de la persona que envió el email\n",
     "💡 Pista 💡 Tendremos que hacer dos busquedas:\n",
     "Una para extraer toda la información del remitente. El remitente siempre empieza por From:\n",
     "info_remitente = re.findall('From:.*',email)\n",
     "Otra para extraer el email únicamente.\n",
     "\n",
-    "2)Extraer el nombre de la persona que envió el email.\n",
+    "2) Extraer el nombre de la persona que envió el email.\n",
     "💡 Pista 💡 Tendremos que hacer dos busquedas:\n",
     "Podemos usar el resultado de la primera búsqueda del ejercicio anterior para sacar el nombre.\n",
     "Otra para extraer el nombre únicamente.\n",
     "\n",
-    "3)El día en el que se mandó el email.\n",
+    "3) El día en el que se mandó el email.\n",
     "💡 Pista 💡 De la misma forma que antes buscamos por From: primero, ahora lo tendremos que hacer con Date: .*\n",
     "\n",
-    "4)El asunto del email.\n",
+    "4) El asunto del email.\n",
     "💡 Pista 💡 Busca primero \"Subject:.* y después busca el patrón para extraer el asunto.\n",
     "\n",
-    "5)Guarda todos los resultados en un diccionario\n",
+    "5) Guarda todos los resultados en un diccionario\n",
     "\n",
     "💪🏽 BONUS 💪🏽\n",
     "Utiliza funciones para cada una de los objetivos planteados."
