--- a/Python/Pair_2_Listas_2.ipynb
+++ b/Python/Pair_2_Listas_2.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio 1\n",
+    "En el juego de hoy vamos a pedir al usuario que introduzca una lista de números, separado por espacios, para adivinar el número secreto."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -11,10 +19,10 @@
      "text": [
       "¡Comencemos el juego!\n",
       "El usuario tiene que facilitar una lista de números\n",
-      "Tiene 4 elementos entre 1 a 4\n",
+      "Tiene 5 elementos entre 1 a 20\n",
       "¿Han adivinado el número secreto?\n",
       "True\n",
-      "Terminamos el juego. El número era 1\n"
+      "Terminamos el juego. El número era 15\n"
      ]
     }
    ],
@@ -23,7 +31,7 @@
     "\n",
     "print('¡Comencemos el juego!')\n",
     "\n",
-    "str_input = \"Lista de números, separado por espacios: \"\n",
+    "str_input = \"Escribe tu Lista de números, separado por espacios: \"\n",
     "\n",
     "# User input\n",
     "num_list = list(int(num) for num in input(str_input).strip().split())\n",
@@ -46,11 +54,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.9 64-bit",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -66,7 +71,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "328661ec968ebc77b93161299d44fd1f4547ee33c9a17c5e95f23064c7c08def"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
