--- a/Python/Pair_5_Loops_1.ipynb
+++ b/Python/Pair_5_Loops_1.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio 1\n",
+    "Hoy el juego es tres en línea, que vamos a construir una base en que permitimos dos inputs de usuaria, para que cada jugador pueda jugar una sola vez."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -15,20 +23,20 @@
       "  |   |  \n",
       "  |   |  \n",
       "\n",
-      "El usuario dio el input: x 1,2\n",
+      "El usuario dio el input: x 2,3\n",
       "\n",
-      "  | x |  \n",
       "  |   |  \n",
+      "  |   | x\n",
       "  |   |  \n",
       "\n",
-      "El usuario dio el input: y 2,3\n",
+      "El usuario dio el input: o 3,1\n",
       "\n",
-      "  | x |  \n",
-      "  |   | y\n",
       "  |   |  \n",
+      "  |   | x\n",
+      "o |   |  \n",
       "\n",
       "¡Terminamos el juego!\n",
-      "Los 2 jugadores que han participado son {'x'} {'y'}\n"
+      "Los 2 jugadores que han participado son {'x'} {'o'}\n"
      ]
     }
    ],
@@ -107,11 +115,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "48220cc7eca233757c47c016205bf12bd55261280c552145fb775af00094acbb"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -127,7 +132,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "328661ec968ebc77b93161299d44fd1f4547ee33c9a17c5e95f23064c7c08def"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
