--- a/Python/Pair_6_Loops_2.ipynb
+++ b/Python/Pair_6_Loops_2.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio 1\n",
+    "En el juego de adivinar un número entre dos límites, mientras la cantidad de intentos realizadas no supera a intentos_permitidos la usuaria puede adivinar más números. Con su input evaluamos si está por encima o debajo del número secreto, y se lo decimos en un print. Si ha adivinado el número el juego termina."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,12 +19,12 @@
      "text": [
       "¡Comencemos el juego\n",
       "Tienes 3 intentos para adivinar el número entre 2 y 9.\n",
-      "Intento 1: 3\n",
+      "Intento 1: 1\n",
       "Lo siento, el número secreto es más alto que este\n",
-      "Intento 2: 6\n",
+      "Intento 2: 2\n",
       "Lo siento, el número secreto es más alto que este\n",
-      "Intento 3: 8\n",
-      "Lo siento, el juego ha terminado\n"
+      "Intento 3: 4\n",
+      "Lo siento, el juego ha terminado no has adivinado el número secreto\n"
      ]
     }
    ],
@@ -69,15 +77,12 @@
     "if intento3 == numero_secreto:\n",
     "    print('Enhorabuena, has adivinado el número')\n",
     "else:\n",
-    "    print('Lo siento, el juego ha terminado')\n",
+    "    print('Lo siento, el juego ha terminado no has adivinado el número secreto')\n",
     "\n"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "9df72549cec875d35faaa50875d444b10c11452b268975a17c9dc6870f43870f"
-  },
   "kernelspec": {
    "display_name": "Python 3.9.7 ('base')",
    "language": "python",
@@ -95,7 +100,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "328661ec968ebc77b93161299d44fd1f4547ee33c9a17c5e95f23064c7c08def"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
