--- a/Python/Pair_7_Loops_3.ipynb
+++ b/Python/Pair_7_Loops_3.ipynb
@@ -1,24 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio 1\n",
+    "El juego de hoy es adivinar una palabra letra por letra. El popular juego del \"Ahorcado\"\n",
+    "\n",
+    "El programa tendrá dos ajustes, una lista de palabras y la cantidad de intentos permitidos. \n",
+    "\n",
+    "La palabra secreta será elegido aleatoriamente de la lista que propongáis. \n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['R', 'E', 'D']\n",
-      "_ _ _ \n",
+      "_ _ _ _ _ \n",
       "Comenzamos el juego\n",
       "Tienes 8 intentos para adivinar la palabra\n",
-      "Intento 1 :  R\n",
-      "R  _ _ Intento 2 :  E\n",
-      "R  E  _ Intento 3 :  D\n",
-      "R  E  D  \n",
-      "¡Terminamos el juego! \n",
-      "Enhorabuena, has adivinado la palabra\n"
+      "Intento 1 :  o\n",
+      "_ _ _ _ _ Intento 2 :  r\n",
+      "_ _ _ _ _ Intento 3 :  a\n",
+      "_ _ _ _ _ Intento 4 :  a\n",
+      "_ _ _ _ _ Intento 5 :  e\n",
+      "_ _ _ _ _ Intento 6 :  u\n",
+      "_ _ _ _ _ Intento 7 :  c\n",
+      "_ _ _ _ _ Intento 8 :  n\n",
+      "_ _ _ _ _ "
      ]
     }
    ],
@@ -27,7 +41,6 @@
     "\n",
     "palabras = 'red orange yellow green blue indigo violet white black brown'.split()\n",
     "\n",
-    "# Ajustes\n",
     "\n",
     "# Strings\n",
     "palabra_secreta = palabras[random.randint(0, len(palabras)-1)].upper()\n",
@@ -69,9 +82,6 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "9df72549cec875d35faaa50875d444b10c11452b268975a17c9dc6870f43870f"
-  },
   "kernelspec": {
    "display_name": "Python 3.9.7 ('base')",
    "language": "python",
@@ -87,9 +97,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "328661ec968ebc77b93161299d44fd1f4547ee33c9a17c5e95f23064c7c08def"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
