--- a/Python/Pair_6_Loops_2.ipynb
+++ b/Python/Pair_6_Loops_2.ipynb
@@ -5,26 +5,29 @@
    "metadata": {},
    "source": [
     "# Ejercicio 1\n",
-    "En el juego de adivinar un número entre dos límites, mientras la cantidad de intentos realizadas no supera a intentos_permitidos la usuaria puede adivinar más números. Con su input evaluamos si está por encima o debajo del número secreto, y se lo decimos en un print. Si ha adivinado el número el juego termina."
+    "En el juego el usuario tendra que adivinar un número entre 2 y 9.\n",
+    "Tendra 3 intentos para adivinarlo y en cada intento tendra una pista acerca del número secreto.\n",
+    "El juega termina si el usuario adivina el número o si terminan sus 3 intentos. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "¡Comencemos el juego\n",
+      "¡Comencemos el juego!\n",
       "Tienes 3 intentos para adivinar el número entre 2 y 9.\n",
-      "Intento 1: 1\n",
-      "Lo siento, el número secreto es más alto que este\n",
-      "Intento 2: 2\n",
-      "Lo siento, el número secreto es más alto que este\n",
-      "Intento 3: 4\n",
-      "Lo siento, el juego ha terminado no has adivinado el número secreto\n"
+      "Elige un número del 2 al 9\n",
+      "Intento: 3\n",
+      "Lo siento, el número secreto es mayor que este\n",
+      "Intento: 4\n",
+      "Lo siento, el número secreto es mayor que este\n",
+      "Intento: 5\n",
+      "Enhorabuena, has adivinado el número\n"
      ]
     }
    ],
@@ -33,49 +36,37 @@
     "import random\n",
     "\n",
     "#Comienza el juego. Explicamos las normas\n",
-    "print('¡Comencemos el juego')\n",
+    "print('¡Comencemos el juego!')\n",
     "print('Tienes 3 intentos para adivinar el número entre 2 y 9.')\n",
+    "print(\"Elige un número del 2 al 9\")\n",
     "\n",
     "#Establecemos límites para adivinar los números\n",
-    "lim_inferior = 2\n",
     "lim_superior = 9\n",
+    "lim_inferior = 2\n",
     "\n",
-    "#Código del pair_1 para que el ordenador adivine un número\n",
-    "intentos_permitidos = round(math.log(lim_superior - lim_inferior + 1,2))\n",
+    "\n",
+    "#Definimos el contador de los intentos\n",
+    "intentos = 0\n",
+    "intentos_permitidos = round(math.log(lim_superior - lim_inferior + 1, 2))\n",
+    "intentos_restantes = int(intentos_permitidos) - int(intentos)\n",
+    "\n",
+    "#Código para que el ordenador adivine un número\n",
     "numero_secreto = random.randint(lim_inferior,lim_superior)\n",
     "\n",
-    "#intento1\n",
-    "intento1 = int(input('Di un número entre 2 y 9'))\n",
-    "print('Intento 1:', intento1)\n",
-    "\n",
     "#loop intento1\n",
-    "if intento1 == numero_secreto:\n",
-    "    print('Enhorabuena, has adivinado el número')\n",
-    "elif numero_secreto > intento1:\n",
-    "    print('Lo siento, el número secreto es más alto que este')\n",
-    "elif numero_secreto < intento1:\n",
-    "    print('Lo siento, el número secreto es más bajo que este')\n",
+    "while intentos < intentos_permitidos:\n",
+    "    num = int(input())\n",
+    "    print('Intento:', num)\n",
     "\n",
-    "#intento2\n",
-    "intento2 = int(input('Di un número entre 2 y 9'))\n",
-    "print('Intento 2:', intento2)\n",
-    "\n",
-    "#loop intento2\n",
-    "if intento2 == numero_secreto:\n",
-    "    print('Enhorabuena, has adivinado el número')\n",
-    "elif numero_secreto > intento2:\n",
-    "    print('Lo siento, el número secreto es más alto que este')\n",
-    "elif numero_secreto < intento2:\n",
-    "    print('Lo siento, el número secreto es más bajo que este')\n",
-    "\n",
-    "#intento3\n",
-    "intento3 = int(input('Di un número entre 2 y 9'))\n",
-    "print('Intento 3:', intento3)\n",
-    "\n",
-    "#Ya no nos interesa saber si es más alto o bajo porque el juego ha terminado. \n",
-    "#Si intento3 != numero_secreto el juego termina\n",
-    "if intento3 == numero_secreto:\n",
-    "    print('Enhorabuena, has adivinado el número')\n",
+    "    if num > numero_secreto:\n",
+    "        print('Lo siento, el número secreto es menor que este')\n",
+    "    elif num < numero_secreto:\n",
+    "        print('Lo siento, el número secreto es mayor que este')\n",
+    "    elif num == numero_secreto:\n",
+    "        print('Enhorabuena, has adivinado el número')\n",
+    "        break\n",
+    "    intentos += 1\n",
+    "    intentos_restantes = int(intentos_permitidos) - int(intentos)\n",
     "else:\n",
     "    print('Lo siento, el juego ha terminado no has adivinado el número secreto')\n",
     "\n"
