--- a/Python/Pair_11_Ficheros 2.ipynb
+++ b/Python/Pair_11_Ficheros 2.ipynb
@@ -14,6 +14,7 @@
     "Condiciones de la función:\n",
     "Si el fichero no existe, debe crearlo, insertar contenido y mostrar su contenido.\n",
     "Si el fichero existe pregunta al usuario si quiere sobreescribirlo. En caso de Si, sobreescribe el fichero, insertad contenido y leedlo. En caso de No, no hace nada.\n",
+    "\n",
     "💡 Pistas 💡\n",
     "Para chequear si un fichero existe, podemos usar la función os.listdir() que devuelve una lista con los nombres de los ficheros que hay en un directorio.\n",
     "Para crear un fichero, podemos usar la función open() que recibe como parámetros el nombre del fichero, el modo de apertura y el encoding.\n",
@@ -65,24 +66,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio 2\n",
+    "Tenemos un archivo XML con una lista de peliculas con algunas caracteristicas de cada una de las peliculas de la lista. \n",
+    "\n",
+    "En este ejercicio tendréis que crear una función que reciba el nombre del archivo xml y que devuelva lo siguiente:\n",
+    "Qué tag y atributos tiene el archivo xml.\n",
+    "La descripción de cada una de las películas que tenemos en ese archivo.\n",
+    "Los años en que fueron estrenadas las películas.\n",
+    "\n",
+    "💡 Pistas 💡\n",
+    "La función debe recibir un parámetro, el nombre del archivo xml.\n",
+    "Tendréis que utlizar un bucle for para recorrer todo el archivo xml y extraer la información que os pedimos."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Ejercicio 2:\n",
     "import xml.etree.ElementTree as ET\n",
     "\n",
+    "archivo= 'peliculas.xml' \n",
     "tree = ET.parse('peliculas.xml')\n",
     "root = tree.getroot()\n",
     "\n",
     "\n",
-    "def funcionPeliculas():\n",
+    "def funcionPeliculas(archivo):\n",
     "\n",
-    "    for child in root:     \n",
-    "        print(child.tag)\n",
+    "    for child in root:     #Recorremos el archivo xml\n",
     "        for subchild in child:\n",
+    "            if subchild.tag == 'movie':\n",
+    "                print(subchild.text)\n",
     "            for subsubchild in subchild:\n",
+    "                if subsubchild.tag == 'movie':\n",
+    "                    print(subsubchild.text)\n",
     "                for subsubsubchild in subsubchild:\n",
     "                    if subsubsubchild.tag == 'year':\n",
     "                        print('    ', subsubsubchild.text)\n",
@@ -93,51 +115,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Aquí llamamos a la función.\n",
+    "funcionPeliculas(archivo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "genre\n",
-      "     1981\n",
-      "     \n",
-      "                'Archaeologist and adventurer Indiana Jones \n",
-      "                is hired by the U.S. government to find the Ark of  the Covenant before the Nazis.'\n",
-      "                \n",
-      "     1984\n",
-      "     None provided.\n",
-      "     1985\n",
-      "     Marty McFly\n",
-      "     2000\n",
-      "     Two mutants come to a private academy for their kind whose resident superhero team must oppose a terrorist organization with similar powers.\n",
-      "     1992\n",
-      "     NA.\n",
-      "     1992\n",
-      "     WhAtEvER I Want!!!?!\n",
-      "genre\n",
-      "     1979\n",
-      "     \"\"\"\"\"\"\"\"\"\n",
-      "     1986\n",
-      "     Funny movie on funny guy \n",
-      "     2000\n",
-      "     psychopathic Bateman\n"
+      "   {'category': 'Action'}\n",
+      "     {'years': '1980s'}\n",
+      "     {'favorite': 'True', 'title': 'Indiana Jones: The raiders of the lost Ark'}\n",
+      "     {'favorite': 'True', 'title': 'THE KARATE KID'}\n",
+      "     {'favorite': 'False', 'title': 'Back 2 the Future'}\n",
+      "     {'years': '1990s'}\n",
+      "     {'favorite': 'False', 'title': 'X-Men'}\n",
+      "     {'favorite': 'True', 'title': 'Batman Returns'}\n",
+      "     {'favorite': 'False', 'title': 'Reservoir Dogs'}\n",
+      "   {'category': 'Thriller'}\n",
+      "     {'years': '1970s'}\n",
+      "     {'favorite': 'False', 'title': 'ALIEN'}\n",
+      "     {'years': '1980s'}\n",
+      "     {'favorite': 'True', 'title': \"Ferris Bueller's Day Off\"}\n",
+      "     {'favorite': 'FALSE', 'title': 'American Psycho'}\n",
+      "   genre\n",
+      "     decade\n",
+      "     movie\n",
+      "     movie\n",
+      "     movie\n",
+      "     decade\n",
+      "     movie\n",
+      "     movie\n",
+      "     movie\n",
+      "   genre\n",
+      "     decade\n",
+      "     movie\n",
+      "     decade\n",
+      "     movie\n",
+      "     movie\n"
      ]
     }
    ],
    "source": [
-    "#Aquí llamamos a la función.\n",
-    "funcionPeliculas()"
+    "def nombre_xml(nombre_archivo):\n",
+    "    import xml.etree.ElementTree as ET\n",
+    "\n",
+    "    tree = ET.parse(nombre_archivo)                                         #analizamos el xml\n",
+    "    root = tree.getroot()\n",
+    "    \n",
+    "   \n",
+    "    for subelement in root:                                                 #recorremos el xml para sacar sus attrib\n",
+    "            print('  ',subelement.attrib)\n",
+    "            for subsubelement in subelement:\n",
+    "                print('    ',subsubelement.attrib)\n",
+    "                for subsubsubelement in subsubelement:\n",
+    "                    print('    ',subsubsubelement.attrib)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    for subelement in root:                                                 #recorremos el xml para sacar sus tag\n",
+    "            print('  ',subelement.tag)\n",
+    "            for subsubelement in subelement:\n",
+    "                print('    ',subsubelement.tag)\n",
+    "                for subsubsubelement in subsubelement:\n",
+    "                    print('    ',subsubsubelement.tag)\n",
+    "\n",
+    "\n",
+    "   \n",
+    "\n",
+    "nombre_xml(\"peliculas.xml\")"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -153,7 +214,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "328661ec968ebc77b93161299d44fd1f4547ee33c9a17c5e95f23064c7c08def"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
