--- a/Python/Pair_7_Loops_3.ipynb
+++ b/Python/Pair_7_Loops_3.ipynb
@@ -14,25 +14,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "_ _ _ _ _ \n",
       "Comenzamos el juego\n",
-      "Tienes 8 intentos para adivinar la palabra\n",
-      "Intento 1 :  o\n",
-      "_ _ _ _ _ Intento 2 :  r\n",
-      "_ _ _ _ _ Intento 3 :  a\n",
-      "_ _ _ _ _ Intento 4 :  a\n",
-      "_ _ _ _ _ Intento 5 :  e\n",
-      "_ _ _ _ _ Intento 6 :  u\n",
-      "_ _ _ _ _ Intento 7 :  c\n",
-      "_ _ _ _ _ Intento 8 :  n\n",
-      "_ _ _ _ _ "
+      "_ _ _ _ \n",
+      "\n",
+      "Intento 1 :  A\n",
+      "_ _ _ _ \n",
+      "Intento 2 :  E\n",
+      "_ _ _ E  \n",
+      "Intento 3 :  I\n",
+      "_ _ _ E  \n",
+      "Intento 4 :  B\n",
+      "B  _ _ E  \n",
+      "Intento 5 :  L\n",
+      "B  L  _ E  \n",
+      "Intento 6 :  U\n",
+      "B  L  U  E  \n",
+      "¡Terminamos el juego! \n",
+      "Enhorabuena, has adivinado la palabra\n",
+      "\n",
+      "La palabra secreta era: BLUE\n"
      ]
     }
    ],
@@ -41,27 +48,23 @@
     "\n",
     "palabras = 'red orange yellow green blue indigo violet white black brown'.split()\n",
     "\n",
-    "\n",
     "# Strings\n",
     "palabra_secreta = palabras[random.randint(0, len(palabras)-1)].upper()\n",
     "num_letras = len(palabra_secreta)\n",
     "\n",
+    "#Inicio del juego\n",
+    "print('Comenzamos el juego')\n",
+    "\n",
     "# Variables calculadas\n",
     "huecos = '_ ' * num_letras\n",
     "print(huecos)\n",
-    "\n",
-    "# Inicio del juego\n",
-    "print('Comenzamos el juego')\n",
-    "print('Tienes 8 intentos para adivinar la palabra')\n",
-    "\n",
-    "# Adivinanzas\n",
     "\n",
     "# Input de la usuaria\n",
     "intentos = []\n",
     "\n",
     "for contador_intento in range(8):\n",
     "    intento = input('Escribe una letra')\n",
-    "    print('Intento', contador_intento + 1, ': ', intento)\n",
+    "    print('\\nIntento', contador_intento + 1, ': ', intento)\n",
     "    intentos.append(intento)\n",
     "    palabra_usuario = []\n",
     "\n",
@@ -77,7 +80,9 @@
     "\n",
     "    if list(palabra_secreta) == palabra_usuario:\n",
     "        print('\\n¡Terminamos el juego! \\nEnhorabuena, has adivinado la palabra')\n",
-    "        break\n"
+    "        break\n",
+    "\n",
+    "print(\"\\nLa palabra secreta era:\", palabra_secreta)"
    ]
   }
  ],
